# AI_Anime_Manga_Recommender

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/components/: anime_card.py  chat_interfaces.py
app/pages/: history.py  home.py  recommendations.py
app/utils/: session_state.py
backend/agents/: anime_agent.py
backend/chains/: recommender_chain.py  retrieval_chain.py
backend/prompts/: recommendation_prompt.txt  system_prompt.txt
backend/tools/: anime_search.py  preference_tool.py
backend/vectorstore/: data_loader.py  ingest.py  retriever.py
config/: customException.py  logging.py  settings.py
